background-shadow change

--- a/src/style.scss
+++ b/src/style.scss
@@ -46,7 +46,7 @@ body {
 
 .todo-container {
     background-color: $backColor;
-    box-shadow: 10px 10px 20px rgba(0,0,0,0.7);
+    box-shadow: 10px 10px 20px rgba(126, 58, 58, 0.7);
     font-size: $todoFont;
     margin: 20px 0;
     border-radius: 0 0 15px 15px;
